--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1>hello, world!</h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
+
+        h1 {
+            text-align: center;
+            font-family: 'Bowlby One SC', cursive;
+            font-size: 10.0vw;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>hello, world!</h1>
+</body>
+
+</html>
